cors: corregido